add picture processing
