# public/swagger.json
@@ -23,16 +23,24 @@
       "description": "Users"
     },
     {
-      "name": "places",
-      "description": "places"
-    },
-    {
       "name": "entertainments",
       "description": "entertainments"
     },
     {
-      "name": "assets",
-      "description": "assets"
+      "name": "places",
+      "description": "places"
+    },
+    {
+      "name": "contacts",
+      "description": "contacts"
+    },
+    {
+      "name": "photos",
+      "description": "photos"
+    },
+    {
+      "name": "uploads",
+      "description": "uploads"
     }
   ],
   "securityDefinitions": {
@@ -2215,100 +2223,53 @@
         }
       }
     },
-    "/assets": {
-      "get": {
-        "tags": [
-          "assets"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "summary": "get list of assets available for the user",
-        "operationId": "assets",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "page",
-            "type": "integer",
-            "format": "int64",
-            "default": 0
-          },
-          {
-            "in": "query",
-            "name": "limit",
-            "type": "integer",
-            "format": "int64",
-            "default": 20
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/Asset"
-              }
-            }
-          },
-          "401": {
-            "$ref": "#/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/responses/NotFound"
-          },
-          "500": {
-            "$ref": "#/responses/InternalServerError"
-          }
-        }
-      },
+    "/uploads/picture/url": {
       "post": {
         "tags": [
-          "assets"
+          "uploads"
         ],
         "security": [
           {
             "bearer": []
           }
         ],
-        "summary": "new asset",
-        "operationId": "create-asset",
+        "summary": "upload picture using url",
+        "operationId": "upload-picture-url",
         "consumes": [
-          "multipart/form-data"
+          "application/json"
         ],
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "in": "formData",
-            "name": "file",
-            "type": "file",
-            "description": "Create new asset",
-            "required": true
+            "in": "query",
+            "name": "type",
+            "type": "string",
+            "description": "thumbnail or slide",
+            "default": "thumbnail"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Upload url",
+            "required": true,
+            "schema": {
+              "properties": {
+                "url": {
+                  "type": "string",
+                  "example": "https://example.com/picture.jpg"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "201": {
             "description": "Created",
             "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "$ref": "#/definitions/Asset"
-              }
+              "type": "object",
+              "$ref": "#/definitions/Upload"
             }
           },
           "401": {
@@ -2323,40 +2284,45 @@
         }
       }
     },
-    "/assets/{id}": {
-      "get": {
+    "/uploads/picture/file": {
+      "post": {
         "tags": [
-          "assets"
+          "uploads"
         ],
         "security": [
           {
             "bearer": []
           }
         ],
-        "summary": "get asset",
-        "operationId": "asset",
+        "summary": "upload picture using form data",
+        "operationId": "upload-picture-file",
         "consumes": [
-          "application/json"
+          "multipart/form-data"
         ],
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "in": "path",
-            "name": "id",
-            "type": "integer",
-            "format": "int64",
-            "required": true,
-            "default": 1
+            "in": "query",
+            "name": "type",
+            "type": "string",
+            "description": "thumbnail or slide",
+            "default": "thumbnail"
+          },
+          {
+            "in": "formData",
+            "name": "file",
+            "type": "file",
+            "description": "Upload file using form data"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "schema": {
               "type": "object",
-              "$ref": "#/definitions/Asset"
+              "$ref": "#/definitions/Upload"
             }
           },
           "401": {
@@ -2364,54 +2330,6 @@
           },
           "403": {
             "$ref": "#/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/responses/NotFound"
-          },
-          "500": {
-            "$ref": "#/responses/InternalServerError"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "assets"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "summary": "delete asset",
-        "operationId": "delete-asset",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "type": "integer",
-            "format": "int64",
-            "required": true,
-            "default": 1
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Deleted"
-          },
-          "401": {
-            "$ref": "#/responses/Unauthorized"
-          },
-          "403": {
-            "$ref": "#/responses/Forbidden"
-          },
-          "404": {
-            "$ref": "#/responses/NotFound"
           },
           "500": {
             "$ref": "#/responses/InternalServerError"
@@ -2793,27 +2711,15 @@
         }
       }
     },
-    "Asset": {
+    "Upload": {
       "required": [
         "url"
       ],
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
         "url": {
           "type": "string",
           "example": "`http://localhost:3333/uploads/QrEtQFgH.jpg`"
-        },
-        "created_at": {
-          "type": "string",
-          "example": "2014-06-26 04:07:31"
-        },
-        "updated_at": {
-          "type": "string",
-          "example": "2014-06-26 04:07:31"
         }
       }
     }
